refactor references and add new flow network detail summary table

--- a/master_thesis/master_thesis.tex
+++ b/master_thesis/master_thesis.tex
@@ -174,7 +174,7 @@
 
     \vspace*{15mm}
 
-    Date of submission: 22.12.2017
+    Date of submission: 05.01.2018
 
     \vspace*{12mm}
   \end{center}
@@ -196,7 +196,7 @@ gültigen Fassung beachtet habe.
 \bigskip
 
 \noindent
-Karlsruhe, den 22.12.2017
+Karlsruhe, den 05.01.2018
 
 % Unterschrift (handgeschrieben)
 
@@ -233,7 +233,7 @@ a flow problem on a subhypergraph such that the quality achievable with a \emph{
 computation is significantly better than with the modeling approach of Sanders and Schulz.
 Finally, we integrate our work as refinement strategy into the $n$-level hypergraph 
 partitioner \emph{KaHyPar} \cite{heuer2017improving}. \\
-We tested our framework on a large benchmark set with $3222$ instances. In comparison to $5$ different systems, 
+We tested our framework on a large benchmark set with $3216$ instances. In comparison to $5$ different systems, 
 our new configuration outperforms the tested state-of-the-art hypergraph partitioners on $70\%$ 
 of the instances. In comparison to the latest version of \emph{KaHyPar}, our new approach 
 improves quality by $2.4\%$ while only incurring a performance slowdown by a factor of $2$. 
@@ -260,10 +260,10 @@ of \emph{hMetis} and outperforms it on $82\%$ of the benchmarks.
 In dieser Arbeit wird ein Framework basierend auf \emph{Max-Flow-Min-Cut} Berechnungen 
 vorgestellt, zur Verbesserung einer balancierten $k$-teilige Aufteilung eines Hypergraphen.
 Aktuell werden Varianten des \emph{FM} Algorithmus \cite{fiduccia1988linear} in allen modernen \emph{Multilevel Hypergraph
-Partitionierer} als lokaler Suchalgorithmus verwendet. Solche \emph{bewegungsbasierende} Heuristiken
+Partitionierer} als lokaler Suchalgorithmus verwendet. Solche \emph{bewegungsbasierenden} Heuristiken
 haben den Nachteil, dass sie nur \emph{lokale} Informationen über die Problemstruktur
-in die Berechnungen miteinfließen lassen. Außerdem, haben viele Knotenbewegungen den selben
-Einfluss auf die Lösungsqualität, dann hängt das Ergebnis oft von
+in die Berechnungen miteinfließen lassen. Wenn viele Knotenbewegungen den selben
+Einfluss auf die Lösungsqualität haben, dann hängt das Ergebnis oft von
 zufälligen Entscheidungen ab, welche der Algorithmus selbst trifft 
 \cite{dutt1997vlsi,krishnamurthy1984improved,mann2014formula}. Flussbasierende Ansätze
 sind nicht \emph{bewegungbasiert} und finden einen \emph{globalen} minimalen Schnitt, welcher 
@@ -278,10 +278,10 @@ Zusätzlich zeigen wir, wie ein Flussproblem auf einem \emph{Subhypergraphen} ko
 werden kann, sodass das eine \emph{Max-Flow-Min-Cut} Berechnung eine bessere Qualität erzielt, 
 als die Modellierung von Sanders und Schulz. Am Ende haben wir unsere Arbeit als 
 Verbesserungsstrategie in den $n$-level \emph{Hypergraph Partitionierer KaHyPar} integriert \cite{heuer2017improving}.\\
-Wir haben unser Framework auf $3222$ verschiedenen Instanzen getestet. Im Vergleich mit $5$
+Wir haben unser Framework auf $3216$ verschiedenen Instanzen getestet. Im Vergleich mit $5$
 verschiedenen Systemen erzielt unsere neue Konfiguration, auf $70\%$ der Instanzen,
 die besten Ergebnisse. Im Vergleich zu der aktuellen Variante von \emph{KaHyPar} ist die
-Qualität der Lösungen um $2.4\%$ gestiegen, während die Laufzeit nur um den Faktor $2$
+Qualität der Lösungen um $2.4\%$ gestiegen, während die Laufzeit lediglich um den Faktor $2$
 langsamer ist. Jedoch hat unser Algorithmus eine vergleichbare Laufzeit mit \emph{hMetis}
 und erzielt auf $82\%$ der Instanzen bessere Ergebnisse.
 
