--- a/literature.bib
+++ b/literature.bib
@@ -12,10 +12,9 @@
 @inproceedings{heuer2017improving,
   title={{Improving Coarsening Schemes for Hypergraph Partitioning by Exploiting Community Structure}},
   author={Heuer, Tobias and Schlag, Sebastian},
-  booktitle={LIPIcs-Leibniz International Proceedings in Informatics},
+  booktitle =	{Proceedings of 16th International Symposium on Experimental Algorithms},
   volume={75},
-  year={2017},
-  organization={Schloss Dagstuhl-Leibniz-Zentrum fuer Informatik}
+  year={2017}
 }
 
 @article{pistorius2003,
@@ -30,12 +29,15 @@
 }
 
 @inproceedings{dutt1997vlsi,
-  title={VLSI circuit partitioning by cluster-removal using iterative improvement techniques},
+  title={{VLSI Circuit Partitioning by Cluster-Removal using Iterative Improvement Techniques}},
   author={Dutt, Shantanu and Deng, Wenyong},
-  booktitle={Proceedings of the 1996 IEEE/ACM international conference on Computer-aided design},
-  pages={194--200},
-  year={1997},
-  organization={IEEE Computer Society}
+  booktitle={Proceedings of the 1996 IEEE/ACM International Conference on Computer-Aided Design},
+  year = {1996},
+  isbn = {0-8186-7597-7},
+  location = {San Jose, California, USA},
+  pages = {194--200},
+  numpages = {7},
+  acmid = {244555}}
 }
 
 @article{zhao2002effective,
@@ -52,7 +54,7 @@
 @article{fortunato2010community,
   title={{Community Detection in Graphs}},
   author={Fortunato, Santo},
-  journal={Physics reports},
+  journal={Physics Reports},
   volume={486},
   number={3},
   pages={75--174},
@@ -74,7 +76,7 @@
 @article{tarjan1972depth,
   title={{Depth-First Search and Linear Graph Algorithms}},
   author={Tarjan, Robert},
-  journal={SIAM journal on computing},
+  journal={SIAM Journal on Computing},
   volume={1},
   number={2},
   pages={146--160},
@@ -86,8 +88,7 @@
   title={{Introduction to Graph Theory}},
   author={West, Douglas Brent and others},
   volume={2},
-  year={2001},
-  publisher={Prentice hall Upper Saddle River}
+  year={2001}
 }
 
 @article{krishnamurthy1984improved,
@@ -114,12 +115,14 @@
 @article{newman2004analysis,
   title={{Analysis of Weighted Networks}},
   author={Newman, Mark EJ},
-  journal={Physical review E},
-  volume={70},
-  number={5},
-  pages={056131},
-  year={2004},
-  publisher={APS}
+  journal={Physical Rev. E.},
+  volume = {70},
+  issue = {5},
+  pages = {056131},
+  numpages = {9},
+  year = {2004},
+  month = {Nov},
+  publisher = {American Physical Society},
 }
 
 @techreport{harris1955,
@@ -143,7 +146,7 @@
 @inproceedings{sleator1981data,
   title={{A Data Structure for Dynamic Trees}},
   author={Sleator, Daniel D and Tarjan, Robert Endre},
-  booktitle={Proceedings of the thirteenth annual ACM symposium on Theory of computing},
+  booktitle={Proceedings of the 13th Annual ACM Symposium on Theory of Computing},
   pages={114--122},
   year={1981},
   organization={ACM}
@@ -152,11 +155,12 @@
 @article{alpert1995recent,
   title={{Recent Directions in Netlist Partitioning: a Survey}},
   author={Alpert, Charles J and Kahng, Andrew B},
-  journal={Integration, the VLSI journal},
-  volume={19},
-  number={1-2},
-  pages={1--81},
-  year={1995},
+  journal={Integration, the VLSI Journal},
+  volume = "19",
+  number = "1",
+  pages = "1 - 81",
+  year = "1995",
+  issn = "0167-9260",
   publisher={Elsevier}
 }
 
@@ -164,8 +168,8 @@
   title={{Graph Partitioning and Graph Clustering}},
   author={Bader, David A and Meyerhenke, Henning and Sanders, Peter and Wagner, Dorothea},
   volume={588},
-  year={2013},
-  publisher={American Mathematical Society}
+  booktitle={10th Dimacs Implementation Challenge Workshop},
+  year={2012}
 }
 
 @misc{papa2007hypergraph,
@@ -177,7 +181,7 @@
 @article{goldberg1988new,
   title={{A new Approach to the Maximum-Flow Problem}},
   author={Goldberg, Andrew V and Tarjan, Robert E},
-  journal={Journal of the ACM (JACM)},
+  journal={Journal of the ACM},
   volume={35},
   number={4},
   pages={921--940},
@@ -219,7 +223,7 @@
 @article{edmonds1972theoretical,
   title={{Theoretical Improvements in Algorithmic Efficiency for Network Flow Problems}},
   author={Edmonds, Jack and Karp, Richard M},
-  journal={Journal of the ACM (JACM)},
+  journal={Journal of the ACM},
   volume={19},
   number={2},
   pages={248--264},
@@ -248,38 +252,36 @@
 }
 
 @article{goldberg2011maximum,
-  title={Maximum flows by incremental breadth-first search},
+  title={{Maximum Flows by Incremental Breadth-First Search}},
   author={Goldberg, Andrew and Hed, Sagi and Kaplan, Haim and Tarjan, Robert and Werneck, Renato},
-  journal={Algorithms--ESA 2011},
+  journal={Proceedings of 2011 European Symposium on Algorithms},
   pages={457--468},
-  year={2011},
-  publisher={Springer}
+  year={2011}
 }
 
 @incollection{goldberg2015faster,
-  title={Faster and more dynamic maximum flow by incremental breadth-first search},
+  title={{Faster and more Dynamic Maximum Flow by Incremental Breadth-First Search}},
   author={Goldberg, Andrew V and Hed, Sagi and Kaplan, Haim and Kohli, Pushmeet and Tarjan, Robert E and Werneck, Renato F},
-  booktitle={Algorithms-ESA 2015},
+  journal={Proceedings of 2015 European Symposium on Algorithms},
   pages={619--630},
-  year={2015},
-  publisher={Springer}
+  year={2015}
 }
 
 @article{ihler1993modeling,
   title={{Modeling Hypergraphs by Graphs with the same Mincut Properties}},
   author={Ihler, Edmund and Wagner, Dorothea and Wagner, Frank},
   journal={Information Processing Letters},
-  volume={45},
-  number={4},
-  pages={171--175},
-  year={1993},
-  publisher={Elsevier}
+  volume = "45",
+  number = "4",
+  pages = "171 - 175",
+  year = "1993",
+  issn = "0020-0190"
 }
 
 @article{boykov2004experimental,
-  title={An experimental comparison of min-cut/max-flow algorithms for energy minimization in vision},
+  title={{An Experimental Comparison of Min-Cut/Max-Flow Algorithms for Energy Minimization in Vision}},
   author={Boykov, Yuri and Kolmogorov, Vladimir},
-  journal={IEEE transactions on pattern analysis and machine intelligence},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
   volume={26},
   number={9},
   pages={1124--1137},
@@ -311,7 +313,7 @@
 @article{davis2011university,
   title={{The University of Florida Sparse Matrix Collection}},
   author={Davis, Timothy A and Hu, Yifan},
-  journal={ACM Transactions on Mathematical Software (TOMS)},
+  journal={ACM Transactions on Mathematical Software},
   volume={38},
   number={1},
   pages={1},
@@ -357,7 +359,7 @@
 @incollection{bulucc2016recent,
   title={{Recent Advances in Graph Partitioning}},
   author={Bulu{\c{c}}, Ayd{\i}n and Meyerhenke, Henning and Safro, Ilya and Sanders, Peter and Schulz, Christian},
-  booktitle={Algorithm Engineering},
+  booktitle="Algorithm Engineering: Selected Results and Surveys",
   pages={117--158},
   year={2016},
   publisher={Springer}
@@ -372,7 +374,7 @@
 @inproceedings{akhremtsev2017engineering,
   title={{Engineering a direct k-way Hypergraph Partitioning Algorithm}},
   author={Akhremtsev, Yaroslav and Heuer, Tobias and Sanders, Peter and Schlag, Sebastian},
-  booktitle={2017 Proceedings of the 19th Workshop on Algorithm Engineering and Experiments (ALENEX)},
+  booktitle={Proceedings of 2017 19th Workshop on Algorithm Engineering and Experiments},
   pages={28--42},
   year={2017},
   organization={SIAM}
@@ -381,7 +383,7 @@
 @article{karypis1999multilevel,
   title={{Multilevel Hypergraph Partitioning: Applications in VLSI Domain}},
   author={Karypis, George and Aggarwal, Rajat and Kumar, Vipin and Shekhar, Shashi},
-  journal={IEEE Transactions on Very Large Scale Integration (VLSI) Systems},
+  journal={IEEE Transactions on Very Large Scale Integration VLSI Systems},
   volume={7},
   number={1},
   pages={69--79},
@@ -392,7 +394,7 @@
 @article{karypis2000multilevel,
   title={{Multilevel k-way Hypergraph Partitioning}},
   author={Karypis, George and Kumar, Vipin},
-  journal={VLSI design},
+  journal={VLSI Design},
   volume={11},
   number={3},
   pages={285--300},
@@ -403,7 +405,7 @@
 @article{catalyurek1999hypergraph,
   title={{Hypergraph-Partitioning-based Decomposition for Parallel Sparse-Matrix Vector Multiplication}},
   author={Catalyurek, Umit V and Aykanat, Cevdet},
-  journal={IEEE Transactions on parallel and distributed systems},
+  journal={IEEE Transactions on Parallel and Distributed Systems},
   volume={10},
   number={7},
   pages={673--693},
@@ -415,23 +417,25 @@
 @inproceedings{osipov2010n,
   title={{n-Level Graph Partitioning}},
   author={Osipov, Vitaly and Sanders, Peter},
-  booktitle={European Symposium on Algorithms},
+  booktitle={Proceedings of 2010 European Symposium on Algorithms},
   pages={278--289},
   year={2010},
   organization={Springer}
 }
 
-@phdthesis{heuer2015engineering,
+@mastersthesis{heuer2015engineering,
+  document_type={Bachelor's Thesis},
   title={{Engineering Initial Partitioning Algorithms for direct k-way Hypergraph Partitioning}},
   author={Heuer, Tobias},
+  type={Bachelor Thesis},
   year={2015},
-  school={Karlsruher Institut f{\"u}r Technologie (KIT)}
+  school={Karlsruher Institute of Technology}
 }
 
 @inproceedings{schlag2016k,
   title={{k-way Hypergraph Partitioning via n-Level Recursive Bisection}},
   author={Schlag, Sebastian and Henne, Vitali and Heuer, Tobias and Meyerhenke, Henning and Sanders, Peter and Schulz, Christian},
-  booktitle={2016 Proceedings of the Eighteenth Workshop on Algorithm Engineering and Experiments (ALENEX)},
+  booktitle={Proceedings of 2016 18th Workshop on Algorithm Engineering and Experiments},
   pages={53--67},
   year={2016},
   organization={SIAM}
@@ -451,7 +455,7 @@
 @article{ford1956maximal,
   title={{Maximal Flow through a Network}},
   author={Ford, Lester R and Fulkerson, Delbert R},
-  journal={Canadian journal of Mathematics},
+  journal={Canadian Journal of Mathematics},
   volume={8},
   number={3},
   pages={399--404},
@@ -462,13 +466,13 @@
   title={{Flows in Networks}},
   author={Ford Jr, Lester Randolph and Fulkerson, Delbert Ray},
   year={2015},
-  publisher={Princeton university press}
+  publisher={Princeton University Press}
 }
 
 @inproceedings{lang2004flow,
-  title={{A Flow-Based Method for improving the Expansion or Conductance of Graph Cuts}},
+  title={{A Flow-Based Method for Improving the Expansion or Conductance of Graph Cuts}},
   author={Lang, Kevin and Rao, Satish},
-  booktitle={IPCO},
+  booktitle={Proceedings of 10th International IPCO Conference},
   volume={4},
   pages={325--337},
   year={2004},
@@ -478,7 +482,7 @@
 @inproceedings{andersen2008algorithm,
   title={{An Algorithm for Improving Graph Partitions}},
   author={Andersen, Reid and Lang, Kevin J},
-  booktitle={Proceedings of the 19th annual ACM-SIAM symposium on Discrete algorithms},
+  booktitle={Proceedings of the 19th annual ACM-SIAM Symposium on Discrete Algorithms},
   pages={651--660},
   year={2008},
   organization={Society for Industrial and Applied Mathematics}
@@ -487,7 +491,7 @@
 @inproceedings{sanders2011engineering,
   title={{Engineering Multilevel Graph Partitioning Algorithms}},
   author={Sanders, Peter and Schulz, Christian},
-  booktitle={ESA},
+  booktitle={Proceedings of 2011 European Symposium on Algorithms},
   volume={6942},
   pages={469--480},
   year={2011},
@@ -506,7 +510,7 @@
 @inproceedings{holtgrewe2010engineering,
   title={{Engineering a scalable High Quality Graph Partitioner}},
   author={Holtgrewe, Manuel and Sanders, Peter and Schulz, Christian},
-  booktitle={Parallel \& Distributed Processing (IPDPS), 2010 IEEE International Symposium on},
+  booktitle={Proceedings of 2010 IEEE International Symposium on Parallel and Distributed Processing},
   pages={1--12},
   year={2010},
   organization={IEEE}
@@ -515,8 +519,10 @@
 @inproceedings{fiduccia1988linear,
   title={{A Linear-Time Heuristic for improving Network Partitions}},
   author={Fiduccia, Charles M and Mattheyses, Robert M},
-  booktitle={Papers on Twenty-five years of electronic design automation},
-  pages={241--247},
-  year={1988},
+  booktitle = {Papers on 25 Years of Electronic Design Automation},
+  year = {1988},
+  isbn = {0-89791-267-5},
+  pages = {241--247},
+  numpages = {7},
   organization={ACM}
 }
