--- a/master_thesis/experiments/flow_network/flow_network_max_flow_table.tex
+++ b/master_thesis/experiments/flow_network/flow_network_max_flow_table.tex
@@ -1,41 +1,41 @@
-\multirow{5}{*}{\rotatebox{90}{\ALL}} & $500$ & $\mathbf{0.77}$ & $+7.12$ & $+50.83$ & $+64.67$ & $+46.57$ & $+51.3$ & $+200.56$ & $+256.9$ \\ 
- & $1000$ & $\mathbf{2.2}$ & $+5.01$ & $+55.31$ & $+67.38$ & $+26.02$ & $+29.76$ & $+153.55$ & $+206.75$ \\ 
- & $5000$ & $28.6$ & $+5.76$ & $+50.26$ & $+69.07$ & $\mathbf{-3.49}$ & $+6.78$ & $+99.42$ & $+156.17$ \\ 
- & $10000$ & $81.64$ & $+7.85$ & $+42.73$ & $+63.8$ & $\mathbf{-13.48}$ & $+4.83$ & $+71.78$ & $+132.82$ \\ 
- & $25000$ & $167.56$ & $+14.8$ & $+37.09$ & $+69.27$ & $\mathbf{-4.7}$ & $+30.35$ & $+82.25$ & $+172.98$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\ALL}} & $500$ & $0.81$ & $+1.79$ & $+24.56$ & $\mathbf{-7.36}$ \\ 
+ & $1000$ & $\mathbf{1.91}$ & $+12.92$ & $+26.88$ & $+13.9$ \\ 
+ & $5000$ & $\mathbf{13.52}$ & $+38.11$ & $+63.68$ & $+108.43$ \\ 
+ & $10000$ & $\mathbf{28.4}$ & $+53.52$ & $+92.56$ & $+182.79$ \\ 
+ & $25000$ & $\mathbf{64.18}$ & $+50.19$ & $+95.25$ & $+157.03$ \\ 
 \midrule% 
-\multirow{5}{*}{\rotatebox{90}{\DAC}} & $500$ & $\mathbf{0.19}$ & $+4.71$ & $+41.66$ & $+55.51$ & $+79.35$ & $+79.75$ & $+298.08$ & $+454.1$ \\ 
- & $1000$ & $\mathbf{0.46}$ & $+0.05$ & $+52.89$ & $+59.87$ & $+97.75$ & $+97.69$ & $+315.35$ & $+437.36$ \\ 
- & $5000$ & $\mathbf{4.39}$ & $+3.42$ & $+51.14$ & $+69.34$ & $+39.03$ & $+47.39$ & $+294.76$ & $+480.9$ \\ 
- & $10000$ & $\mathbf{14.27}$ & $+3.52$ & $+61.62$ & $+106.02$ & $+12.8$ & $+27.75$ & $+245.63$ & $+446.98$ \\ 
- & $25000$ & $\mathbf{44.44}$ & $+11.51$ & $+16.04$ & $+108.9$ & $+63.4$ & $+91.42$ & $+424.27$ & $+752.95$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\DAC}} & $500$ & $0.29$ & $-10.46$ & $+11.79$ & $\mathbf{-34.02}$ \\ 
+ & $1000$ & $0.71$ & $-9.51$ & $+18.18$ & $\mathbf{-35.86}$ \\ 
+ & $5000$ & $5.16$ & $-5.94$ & $+12.21$ & $\mathbf{-17.03}$ \\ 
+ & $10000$ & $10.23$ & $\mathbf{-1.3}$ & $+33.46$ & $+32.26$ \\ 
+ & $25000$ & $\mathbf{26.05}$ & $+2.14$ & $+112.29$ & $+67.77$ \\ 
 \midrule% 
-\multirow{5}{*}{\rotatebox{90}{\ISPD}} & $500$ & $\mathbf{0.37}$ & $+7.37$ & $+38.77$ & $+52.08$ & $+53.92$ & $+57.79$ & $+270.94$ & $+351.04$ \\ 
- & $1000$ & $\mathbf{0.87}$ & $+4.8$ & $+46.05$ & $+54.38$ & $+41.35$ & $+43.38$ & $+295.43$ & $+374.43$ \\ 
- & $5000$ & $\mathbf{10.51}$ & $+1.69$ & $+54.66$ & $+70.69$ & $+40.07$ & $+53.53$ & $+353.41$ & $+483.79$ \\ 
- & $10000$ & $\mathbf{41.82}$ & $+1.02$ & $+51.86$ & $+80.43$ & $+84.99$ & $+109.85$ & $+456.33$ & $+649.18$ \\ 
- & $25000$ & $\mathbf{271.64}$ & $+2.4$ & $+26.77$ & $+57.93$ & $+109.79$ & $+156.16$ & $+398.97$ & $+589.37$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\ISPD}} & $500$ & $0.42$ & $-11.77$ & $+23.1$ & $\mathbf{-13.55}$ \\ 
+ & $1000$ & $0.98$ & $-11.76$ & $+14.61$ & $\mathbf{-12.01}$ \\ 
+ & $5000$ & $7.33$ & $\mathbf{-1.06}$ & $+65.21$ & $+41.04$ \\ 
+ & $10000$ & $\mathbf{15.19}$ & $+5.27$ & $+209.29$ & $+164.02$ \\ 
+ & $25000$ & $\mathbf{41.5}$ & $+15.04$ & $+782.45$ & $+525.31$ \\ 
 \midrule% 
-\multirow{5}{*}{\rotatebox{90}{\Dual}} & $500$ & $\mathbf{0.14}$ & $+7.67$ & $+21.17$ & $+43.25$ & $+84.81$ & $+103.57$ & $+129.67$ & $+302.37$ \\ 
- & $1000$ & $\mathbf{0.29}$ & $+6.19$ & $+17.48$ & $+37.63$ & $+94.91$ & $+117.11$ & $+127.92$ & $+338.95$ \\ 
- & $5000$ & $\mathbf{1.94}$ & $+14.75$ & $+7.02$ & $+39.36$ & $+109.27$ & $+221.2$ & $+130.41$ & $+439.71$ \\ 
- & $10000$ & $\mathbf{4.19}$ & $+26.87$ & $+3.37$ & $+46.59$ & $+131.25$ & $+383.05$ & $+148.38$ & $+668$ \\ 
- & $25000$ & $\mathbf{13.02}$ & $+68.6$ & $+0.5$ & $+88.47$ & $+181.61$ & $+907.16$ & $+179.14$ & $+1259.26$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\Dual}} & $500$ & $0.24$ & $-12.17$ & $+1.24$ & $\mathbf{-42.11}$ \\ 
+ & $1000$ & $0.51$ & $-11.4$ & $+3.32$ & $\mathbf{-43.34}$ \\ 
+ & $5000$ & $3.41$ & $-7.46$ & $+7.3$ & $\mathbf{-43.5}$ \\ 
+ & $10000$ & $6.65$ & $-2.56$ & $+21.99$ & $\mathbf{-37.53}$ \\ 
+ & $25000$ & $15.63$ & $+3.86$ & $+65.81$ & $\mathbf{-17.12}$ \\ 
 \midrule% 
-\multirow{5}{*}{\rotatebox{90}{\Primal}} & $500$ & $3.6$ & $+1.45$ & $+134.06$ & $+137.82$ & $-30.48$ & $\mathbf{-30.82}$ & $+157.29$ & $+154.56$ \\ 
- & $1000$ & $10.65$ & $+1.42$ & $+173.18$ & $+182.59$ & $-38.78$ & $\mathbf{-39.26}$ & $+103.91$ & $+109.21$ \\ 
- & $5000$ & $184.72$ & $+1.88$ & $+166.77$ & $+181.9$ & $\mathbf{-60.88}$ & $-60.24$ & $+62.12$ & $+70.09$ \\ 
- & $10000$ & $290.9$ & $+1.66$ & $+122.2$ & $+133.96$ & $\mathbf{-55.38}$ & $-53.76$ & $+50.44$ & $+56.67$ \\ 
- & $25000$ & $1002.32$ & $+1.43$ & $+142.23$ & $+148.6$ & $-56.54$ & $\mathbf{-57.04}$ & $+53.74$ & $+59.62$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\Primal}} & $500$ & $\mathbf{1.45}$ & $+24.48$ & $+58.97$ & $+143.23$ \\ 
+ & $1000$ & $\mathbf{3.51}$ & $+22.79$ & $+66.63$ & $+200.62$ \\ 
+ & $5000$ & $\mathbf{26.34}$ & $+23.07$ & $+122.09$ & $+589.46$ \\ 
+ & $10000$ & $\mathbf{48.87}$ & $+14.37$ & $+110.18$ & $+484.42$ \\ 
+ & $25000$ & $\mathbf{102.32}$ & $+17.38$ & $+237.9$ & $+852.3$ \\ 
 \midrule% 
-\multirow{5}{*}{\rotatebox{90}{\Literal}} & $500$ & $\mathbf{0.94}$ & $+4.42$ & $+95.12$ & $+106.26$ & $+23.37$ & $+24.05$ & $+273.61$ & $+330.97$ \\ 
- & $1000$ & $3.06$ & $+3.54$ & $+107.09$ & $+120.36$ & $-12.02$ & $\mathbf{-13.64}$ & $+215.13$ & $+260.24$ \\ 
- & $5000$ & $38.66$ & $+6.67$ & $+110.25$ & $+152.32$ & $\mathbf{-29.59}$ & $-27.69$ & $+180.27$ & $+238.17$ \\ 
- & $10000$ & $122.71$ & $+6.57$ & $+106.82$ & $+138.04$ & $\mathbf{-39.43}$ & $-32.93$ & $+160.96$ & $+214.77$ \\ 
- & $25000$ & $266.94$ & $+10.03$ & $+87.48$ & $+124.75$ & $\mathbf{-36.29}$ & $-23.41$ & $+191.07$ & $+243.8$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\Literal}} & $500$ & $\mathbf{0.66}$ & $+0.55$ & $+61.36$ & $+38.8$ \\ 
+ & $1000$ & $\mathbf{1.63}$ & $+8.06$ & $+51.86$ & $+84.71$ \\ 
+ & $5000$ & $\mathbf{11.55}$ & $+13.41$ & $+94.09$ & $+227.94$ \\ 
+ & $10000$ & $\mathbf{25.28}$ & $+14.81$ & $+130.87$ & $+375.89$ \\ 
+ & $25000$ & $\mathbf{55.67}$ & $+7.27$ & $+125.34$ & $+367.7$ \\ 
 \midrule% 
-\multirow{5}{*}{\rotatebox{90}{\SPM}} & $500$ & $\mathbf{0.98}$ & $+11.65$ & $+19.8$ & $+32.33$ & $+104.15$ & $+111.46$ & $+213.59$ & $+232.13$ \\ 
- & $1000$ & $\mathbf{3.23}$ & $+7.7$ & $+16.29$ & $+24.21$ & $+65.42$ & $+71.86$ & $+135.55$ & $+149.33$ \\ 
- & $5000$ & $\mathbf{54.77}$ & $+3.81$ & $+10.65$ & $+15.63$ & $+9.93$ & $+12$ & $+38.83$ & $+47.28$ \\ 
- & $10000$ & $217.75$ & $+4.41$ & $+7.62$ & $+13.47$ & $\mathbf{-24.96}$ & $-20.83$ & $-7.96$ & $-2.78$ \\ 
- & $25000$ & $229.09$ & $+3.88$ & $+7.4$ & $+12.9$ & $\mathbf{-20.77}$ & $-15.81$ & $-8.61$ & $-0.81$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\SPM}} & $500$ & $1.6$ & $+3.5$ & $+8.07$ & $\mathbf{-39.46}$ \\ 
+ & $1000$ & $3.79$ & $+34.29$ & $+14.28$ & $\mathbf{-14.95}$ \\ 
+ & $5000$ & $\mathbf{26.3}$ & $+121.86$ & $+65.34$ & $+105.19$ \\ 
+ & $10000$ & $\mathbf{60.57}$ & $+196.95$ & $+103.28$ & $+256.18$ \\ 
+ & $25000$ & $\mathbf{140.35}$ & $+169.78$ & $+14.7$ & $+62.44$ \\ 
