fix references, figures, legends and captions

--- a/literature.bib
+++ b/literature.bib
@@ -104,7 +104,6 @@
 @incollection{HuMoerder85,
   author      = {Hu, T. C. and Moerder, K.},
   title       = {{Multiterminal Flows in a Hypergraph}},
-  editor      = {Hu, T.C. and Kuh, E.S.},
   booktitle   = {{VLSI Circuit Layout: Theory and Design}},
   publisher   = "IEEE Press",
   year        = 1985,
@@ -121,7 +120,6 @@
   pages = {056131},
   numpages = {9},
   year = {2004},
-  month = {Nov},
   publisher = {American Physical Society},
 }
 
@@ -179,7 +177,7 @@
 }
 
 @article{goldberg1988new,
-  title={{A new Approach to the Maximum-Flow Problem}},
+  title={{A New Approach to the Maximum-Flow Problem}},
   author={Goldberg, Andrew V and Tarjan, Robert E},
   journal={Journal of the ACM},
   volume={35},
@@ -199,7 +197,7 @@
 }
 
 @article{derigs1989implementing,
-  title={{Implementing Goldberg's Max-Flow-Algorithm — A Computational Investigation}},
+  title={{Implementing Goldberg's Max-Flow-Algorithm -- A Computational Investigation}},
   author={Derigs, Ulrich and Meier, Wolfgang},
   journal={Mathematical Methods of Operations Research},
   volume={33},
