--- a/master_thesis/master_thesis.tex
+++ b/master_thesis/master_thesis.tex
@@ -234,11 +234,11 @@ computation is significantly better than with the modeling approach of Sanders a
 Finally, we integrate our work as refinement strategy into the $n$-level hypergraph 
 partitioner \emph{KaHyPar} \cite{heuer2017improving}. \\
 We tested our framework on a large benchmark set with $3216$ instances. In comparison to $5$ different systems, 
-our new configuration outperforms the tested state-of-the-art hypergraph partitioners on $70\%$ 
+our new configuration outperforms the tested state-of-the-art hypergraph partitioners on $73\%$ 
 of the instances. In comparison to the latest version of \emph{KaHyPar}, our new approach 
-improves quality by $2.4\%$ while only incurring a performance slowdown by a factor of $2$. 
+improves quality by $2.5\%$ while only incurring a performance slowdown by a factor of $2$. 
 However, our algorithm is still as fast as the direct $k$-way version 
-of \emph{hMetis} and outperforms it on $82\%$ of the benchmarks.
+of \emph{hMetis} and outperforms it on $84\%$ of the benchmarks.
 %All variations
 %of the algorithm have in common that they greedily \emph{move} (hyper)nodes between
 %blocks of a partition according to an associated \emph{gain}, which value depends on
@@ -279,11 +279,11 @@ werden kann, sodass das eine \emph{Max-Flow-Min-Cut} Berechnung eine bessere Qua
 als die Modellierung von Sanders und Schulz. Am Ende haben wir unsere Arbeit als 
 Verbesserungsstrategie in den $n$-level \emph{Hypergraph Partitionierer KaHyPar} integriert \cite{heuer2017improving}.\\
 Wir haben unser Framework auf $3216$ verschiedenen Instanzen getestet. Im Vergleich mit $5$
-verschiedenen Systemen erzielt unsere neue Konfiguration, auf $70\%$ der Instanzen,
+verschiedenen Systemen erzielt unsere neue Konfiguration, auf $73\%$ der Instanzen,
 die besten Ergebnisse. Im Vergleich zu der aktuellen Variante von \emph{KaHyPar} ist die
-Qualität der Lösungen um $2.4\%$ gestiegen, während die Laufzeit lediglich um den Faktor $2$
+Qualität der Lösungen um $2.5\%$ gestiegen, während die Laufzeit lediglich um den Faktor $2$
 langsamer ist. Jedoch hat unser Algorithmus eine vergleichbare Laufzeit mit \emph{hMetis}
-und erzielt auf $82\%$ der Instanzen bessere Ergebnisse.
+und erzielt auf $84\%$ der Instanzen bessere Ergebnisse.
 
 \end{abstract}
 
@@ -401,10 +401,10 @@ I could continue every morning with the same energy and passion as the day befor
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\bibliographystyle{abbrv}
+\bibliographystyle{acm}
 \bibliography{../literature}
 
-\newpage
+\newpage 
 
 \begin{appendix}
 \input{sections/appendix}
