--- a/master_thesis/sections/experiments.tex
+++ b/master_thesis/sections/experiments.tex
@@ -110,7 +110,7 @@ instances (see \Dual~instances). \\
 \centering
 \input{experiments/flow_network/node_edge_distribution.tex} %
 \caption{Comparison of the number of nodes and edges induced by flow problems 
-         of size $|V'| = 25000$ on our flow network for different benchmark types.
+         of size $|V'| = 25000$ on our flow networks for different benchmark types.
          The red dashed lines indicates $25000$ nodes.}
 \label{fig:node_edge_distribution}
 \end{figure} 
@@ -157,7 +157,7 @@ $|V'|$ &  $t[ms]$ & $t[\%]$ & $t[\%]$ & $t[\%]$
 \csname @@input\endcsname experiments/flow_network/flow_network_max_flow_summary_table.tex 
 \bottomrule
 \end{tabular}
-\caption{Absolute running time of our maximum flow algorithms on flow network $\ExpHybrid$.
+\caption{Average running times of our maximum flow algorithms on flow network $\ExpHybrid$.
          Note, all values in the table are in percentage relative to the running time
          of the \IBFS~algorithm. In each line the fastest variant is marked bold.}
 \label{tbl:flow_algo_network_summary}
@@ -201,7 +201,7 @@ $\alpha'$ & Avg.$[\%]$ & $t[s]$ & Avg.$[\%]$ & $t[s]$ & Avg.$[\%]$ & $t[s]$ & Av
 \end{tabular}
 \caption{ Table contains results for different configurations of our flow-based refinement
           framework for increasing $\alpha'$. The quality in column \emph{Avg.} is relative
-          to our baseline configuration without the usage of flows. }
+          to our baseline configuration \FlowVariant{-}{-}{+}. }
 \label{tbl:alpha_exp}
 \end{table}
 
@@ -259,7 +259,7 @@ $\alpha'$ & \footnotesize{\textsc{M1} - Avg.$[\%]$} & \footnotesize{\textsc{M2} 
 \csname @@input\endcsname experiments/flow_alpha/flow_alpha_modeling_comparison_table.tex
 \bottomrule
 \end{tabular}
-\caption{ Comparison of quality of our framework with different source and sink set
+\caption{ Comparison on quality of our framework with different source and sink set
           modeling approaches. \textsc{M1} represents the approach of Sanders and Schulz
           \cite{sanders2011engineering} and \textsc{M2} is our new variant proposed 
           in Section \ref{sec:source_and_sink}.  }
@@ -297,33 +297,34 @@ Variant & Avg.$[\%]$ & Min.$[\%]$ & $t_{\text{flow}}[s]$ & $t[s]$ \\
 \end{tabular} 
 \caption{Results of our flow-based refinement framework with different speedup heuristics.}
 \label{tbl:heuristics}
-\end{table}
+\end{table} 
 
-\subsection{Comparison with other Hypergraph Partitioner}
+\subsection{Comparison with other Hypergraph Partitioners}
 \label{sec:final_comparison}
 
 Finally, we compare our new approach \KaHyPar{MF} with different state-of-the-art hypergraph
-partitioner on our full benchmark set. We excluded $200$ instances of $3416$ either because 
+partitioners on the full benchmark set. We excluded $200$ instances of $3416$ either because 
 \PaToH{Q} could not allocate enough memory or other partitioners did not finish in time. The
 excluded instances are shown in Table \ref{tbl:excluded}. \\
 \autoref{fig:final_flow}~summarizes the results of the experiment. \KaHyPar{MF}
-produce on $\approx 70\%$ of all benchmark instances the best partitions. It is followed by
-\hMetis{R} ($14\%$), \hMetis{K} ($11\%$), \KaHyPar{CA} ($2.4\%$), 
-\PaToH{Q} ($1.9\%$) and \PaToH{D} ($1.4\%$). Comparing \KaHyPar{MF} 
-individually with each partitioner, \KaHyPar{MF} produces better partitions than \KaHyPar{CA},
-\hMetis{R}, \hMetis{K}, \PaToH{Q}, \PaToH{Q} on $96\%$, $80\%$, $82\%$, $95\%$, $95\%$ of the benchmark instances.
+produces the best partitions on $72.9\%$ of all benchmark instances. It is followed by
+\hMetis{R} ($12.3\%$), \hMetis{K} ($10.3\%$), \KaHyPar{CA} ($1.3\%$), 
+\PaToH{Q} ($1.8\%$) and \PaToH{D} ($1.4\%$). \KaHyPar{MF} improves the quality of 
+\KaHyPar{CA} by $2.49\%$ (see \autoref{tbl:full_quality}). Comparing \KaHyPar{MF} 
+with each partitioner individually, \KaHyPar{MF} produces better partitions than \KaHyPar{CA},
+\hMetis{R}, \hMetis{K}, \PaToH{Q}, \PaToH{Q} on $97\%$, $82\%$, $84\%$, $95\%$, $95\%$ of the benchmark instances.
 Especially on \emph{VLSI} instances, \KaHyPar{MF} calculates significantly better partitions
 than all other hypergraph partitioners (see \DAC~and \ISPD~in \autoref{fig:final_flow}).\\
 \begin{figure}
 \centering
 \input{experiments/final_flow/fullset.tex} %
 \caption{Min-Cut performance plots comparing \KaHyPar{MF} with \KaHyPar{CA} and
-         other systems. Plots are explained in Section \ref{sec:methodology}.}
+         other partitioners. Plots are explained in Section \ref{sec:methodology}.}
 \label{fig:final_flow}
 \end{figure} 
-Table \ref{tbl:running_time} shows the running time of all partitioner for different benchmark
+Table \ref{tbl:running_time} shows the running time of all partitioners for different benchmark
 types. The running time of \KaHyPar{MF} is within a factor of $2$ slower than \KaHyPar{CA} and
-is comparable to the running time of \hMetis{K}. 
+is comparable to the running time of \hMetis{K} and \hMetis{R}. 
 \begin{table}[ht!]
 \renewcommand{\arraystretch}{1.15}
 \centering
@@ -334,12 +335,6 @@ is comparable to the running time of \hMetis{K}.
  & \ALL & \DAC & \ISPD & \Primal & \Literal & \Dual & \SPM \\
 \midrule%
 \csname @@input\endcsname experiments/final_flow/final_flow_running_time.tex 
-\bottomrule
-\multirow{2}{*}{Partitioner} & \multicolumn{7}{c}{Running Time $t[s]$} \\
-\cmidrule{2-8}
- & \ALL & \DAC & \ISPD & \Primal & \Literal & \Dual & \SPM \\
-\midrule%
-\csname @@input\endcsname experiments/final_flow/final_flow_running_time_old.tex 
 \bottomrule
 \end{tabular} 
 \caption{Comparing the average running time of \KaHyPar{MF} with \KaHyPar{CA} and
