--- a/master_thesis/sections/flow_refinement.tex
+++ b/master_thesis/sections/flow_refinement.tex
@@ -237,8 +237,9 @@ cut of all possible bipartitions with the restriction that only hypernodes of $V
 \begin{figure}
 \centering
 \includegraphics[width=0.95\textwidth]{../img/source_and_sink_set/edge_size_two.eps}
-\caption{Illustration of modeling hyperedges of size two if the incoming or outgoing
-         hyperedge node is a source or a sink node of the flow problem.}
+\caption{Illustration of modeling hyperedges of size one of the flow network
+         if the incoming or outgoing hyperedge node is a source or a sink node 
+         of the flow problem.}
 \label{img:edge_size_two}
 \end{figure}
 %Further, we can reduce the number of nodes and edges, if model each edge which is fully contained
