--- a/master_thesis/sections/model_flow.tex
+++ b/master_thesis/sections/model_flow.tex
@@ -120,10 +120,10 @@ we will use the following lemma in the correctness proof.
 \begin{figure}
 \centering
 \includegraphics[width=0.8\textwidth]{../img/network_transformation/heuer_transformation.eps}
-\caption{Transformation of a hypergraph $H$ into an equivalent flow network \ShortExT{H}{V} by removing
+\caption{Transformation of a hypergraph $H$ into the flow network \ShortExT{H}{V} by removing
          all hypernodes of \ShortT{L}. Note, capacity of the black edges in the flow network is $\infty$.}
 \label{img:heuer_network}
-\end{figure}
+\end{figure} 
 
 \begin{lemma}[Source/Sink Node Removal]
 \label{lemma:source_and_sink_removal}
@@ -375,7 +375,7 @@ The same hyperedge induces $2$ nodes and $2$ edges in \ShortT{G} (see \autoref{i
 \begin{figure}
 \centering
 \includegraphics[width=0.8\textwidth]{../img/network_transformation/graph_transformation.eps}
-\caption{Transformation of a hypergraph into an equivalent flow network by inserting 
+\caption{Transformation of a hypergraph into the flow network \ShortT{G} by inserting 
          an undirected edge with capacity $\omega(e)$ for each hyperedge of size $2$. 
          Note, capacity of the black edges in the flow network is $\infty$.}
 \label{img:graph_transformation}
