--- a/master_thesis/sections/preliminaries.tex
+++ b/master_thesis/sections/preliminaries.tex
@@ -158,7 +158,7 @@ $\capacity{s,s'} = \capacity{t',t} = \infty$.
 \centering
 \includegraphics[width=0.9\textwidth]{../img/maximum_flow/vertex_seperator_example.eps}
 \caption{ Illustration of the vertex separator problem and the flow network $T_V(G)$ in which
-          we can find a minimum vertex separator. }
+          we can find a minimum $(s,t)$-vertex separator. }
 \label{img:vertex_seperator_example}
 \end{figure}
 
