--- a/master_thesis/sections/related_work.tex
+++ b/master_thesis/sections/related_work.tex
@@ -135,7 +135,7 @@ a flow network \T{L} proposed by Lawler \cite{lawler1973}. \ShortT{L} is defined
 \begin{figure}
 \centering
 \includegraphics[width=0.8\textwidth]{../img/network_transformation/lawler_transformation.eps}
-\caption{Transformation of a hypergraph into a equivalent flow network by Lawler \cite{lawler1973}. Note,
+\caption{Transformation of a hypergraph into the flow network \ShortT{L} \cite{lawler1973}. Note,
 capacity of the black edges in the flow network is $\infty$.}
 \label{img:lawler_transformation}
 \end{figure}
@@ -167,11 +167,11 @@ hyperedge $e \in E \Rightarrow \incoming{e_1} \cap \outgoing{e_2}$ or $\outgoing
 \centering
 \includegraphics[width=0.75\textwidth]{../img/network_transformation/lawler_augmenting_example.eps}
 \caption{Illustration of the structure of a hyperedge $e$ in \ShortT{L} and the effect of augmenting
-         along a path in this network. The labeling on an edge represents the flow $f(x,y)$ and
+         along a path in the network. The labeling on an edge represents the flow $f(x,y)$ and
          the capacity $\capacity{x,y}$ denoted with $f(x,y)/\capacity{x,y}$. The labeling of the
          edges in the residual graph denotes the residual capacity $r_f(x,y)$. The red highlighted
          path represents an augmenting path.}
-\label{img:lawler_augmenting_example}
+\label{img:lawler_augmenting_example} 
 \end{figure}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -203,7 +203,7 @@ of the concepts and advanced techniques to improve graph partitions.
 \begin{figure}
 \centering
 \includegraphics[width=0.6\textwidth]{../img/flow_local_search/balanced_bipartitioning.eps}
-\caption{Configuration of a flow problem around the cut of graph $G$ \cite{andersen2008algorithm}.}
+\caption{Configuration of a flow problem around the cut of graph $G$ \cite{sanders2011engineering}.}
 \label{img:balanced_bipartition}
 \end{figure}
 Let $(V_1,V_2)$ be a balanced bipartition of a graph $G = (V,E,c,\omega)$. 
