--- a/master_thesis/sections/appendix.tex
+++ b/master_thesis/sections/appendix.tex
@@ -18,7 +18,7 @@ Type & $\max{|E|}$ & Avg.$|e|$ & Med.$|e|$ & Avg.$d(v)$ & Med.$d(v)$ & Avg.$\fra
 \csname @@input\endcsname experiments/instances/parameter_tunning_stats2.tex 
 \bottomrule
 \end{tabular} 
-\caption{Statistical summary of the parameter tunning instances.}
+\caption{Summary of the parameter tunning instances.}
 \label{tbl:parameter_tunning_set}
 \end{table}
 
@@ -39,7 +39,7 @@ Type & $\max{|E|}$ & Avg.$|e|$ & Med.$|e|$ & Avg.$d(v)$ & Med.$d(v)$ & Avg.$\fra
 \csname @@input\endcsname experiments/instances/subset_benchmark_stats2.tex 
 \bottomrule
 \end{tabular} 
-\caption{Statistical summary of the benchmark subset instances.}
+\caption{Summary of the benchmark subset instances.}
 \label{tbl:benchmark_subset}
 \end{table}
 
@@ -61,7 +61,7 @@ Type & $\max{|E|}$ & Avg.$|e|$ & Med.$|e|$ & Avg.$d(v)$ & Med.$d(v)$ & Avg.$\fra
 \csname @@input\endcsname experiments/instances/full_benchmark_stats2.tex 
 \bottomrule
 \end{tabular} 
-\caption{Statistical summary of the full benchmark set instances.}
+\caption{Summary of the full benchmark set instances.}
 \label{tbl:full_benchmark_set}
 \end{table}
 
@@ -218,7 +218,7 @@ now induce $d(v)(d(v) - 1)$ edges instead of $d(v)^2$ edges in the new network.
 \csname @@input\endcsname experiments/flow_network/flow_network_max_flow_table.tex 
 \bottomrule
 \end{tabular}
-\caption{Absolute running time of our maximum flow algorithms on flow network $\ExpHybrid$.
+\caption{Average running times of our maximum flow algorithms on flow network $\ExpHybrid$.
          Note, all values in the table are in percentage relative to the running time
          of the \IBFS~algorithm. In each line the fastest variant is marked bold.}
 \label{tbl:flow_algo_network_detail_summary}
@@ -255,12 +255,12 @@ $\alpha'$ & Avg.$[\%]$ & Avg.$[\%]$ & Avg.$[\%]$ \\
 \caption{ Table contains results of the effectiveness test 
           for different configurations of our flow-based refinement
           framework for increasing $\alpha'$. The quality in column \emph{Avg.} is relative
-          to our baseline configuration without the usage of flows. }
+          to our baseline configuration \FlowVariant{-}{-}{+}. }
 \label{tbl:alpha_effectiveness_exp}
 \end{table}
 
 \newpage
-\section{Detailed Speedup Heuristic Evaluation}
+\section{Detailed Speed-Up Heuristic Evaluation}
 \begin{figure}[h!]
 \centering
 \input{experiments/speed_up_heuristics/subset.tex} %
@@ -286,7 +286,7 @@ $\alpha'$ & Avg.$[\%]$ & Avg.$[\%]$ & Avg.$[\%]$ \\
 \end{table}
 
 \newpage
-\section{Detailed Comparison with other Systems}
+\section{Detailed Comparison with other Hypergraph Partitioners}
 
 \begin{table}[ht!]
 \renewcommand{\arraystretch}{1.15}
@@ -299,15 +299,9 @@ $\alpha'$ & Avg.$[\%]$ & Avg.$[\%]$ & Avg.$[\%]$ \\
 \midrule%
 \csname @@input\endcsname experiments/final_flow/final_flow_km1_per_instance.tex 
 \bottomrule
-\multirow{2}{*}{Partitioner} & \multicolumn{7}{c}{Average $\lambda - 1$} \\
-\cmidrule{2-8}
- & \ALL & \DAC & \ISPD & \Primal & \Literal & \Dual & \SPM \\
-\midrule%
-\csname @@input\endcsname experiments/final_flow/final_flow_km1_per_instance_old.tex 
-\bottomrule
 \end{tabular} 
 \caption{Comparison of average $(\lambda - 1)$ metric of \KaHyPar{MF} with \KaHyPar{CA} and
-         other systems on different benchmark types. The results are in percentage 
+         other partitioners on different benchmark types. The results are in percentage 
          relative to \KaHyPar{MF}.}
 \label{tbl:full_quality} 
 \end{table}
@@ -323,15 +317,9 @@ $\alpha'$ & Avg.$[\%]$ & Avg.$[\%]$ & Avg.$[\%]$ \\
 \midrule%
 \csname @@input\endcsname experiments/final_flow/final_flow_km1_per_k.tex 
 \bottomrule
-\multirow{2}{*}{Partitioner} & \multicolumn{7}{c}{Average $\lambda - 1$} \\
-\cmidrule{2-8}
- & $k = 2$ & $k = 4$ & $k = 8$ & $k = 16$ & $k = 32$ & $k = 64$ & $k = 128$ \\
-\midrule%
-\csname @@input\endcsname experiments/final_flow/final_flow_km1_per_k_old.tex 
-\bottomrule
 \end{tabular} 
 \caption{Comparison of average $(\lambda - 1)$ metric of \KaHyPar{MF} with \KaHyPar{CA} and
-         other systems for different values of $k$. The results are in percentage 
+         other partitioners for different values of $k$. The results are in percentage 
          relative to \KaHyPar{MF}.}
 \label{tbl:full_quality_k} 
 \end{table}
@@ -347,15 +335,9 @@ $\alpha'$ & Avg.$[\%]$ & Avg.$[\%]$ & Avg.$[\%]$ \\
 \midrule%
 \csname @@input\endcsname experiments/final_flow/final_flow_running_time_per_k.tex
 \bottomrule
-\multirow{2}{*}{Partitioner} & \multicolumn{7}{c}{Running Time $t[s]$} \\
-\cmidrule{2-8}
- & $k = 2$ & $k = 4$ & $k = 8$ & $k = 16$ & $k = 32$ & $k = 64$ & $k = 128$ \\
-\midrule%
-\csname @@input\endcsname experiments/final_flow/final_flow_running_time_per_k_old.tex
-\bottomrule
 \end{tabular} 
 \caption{Comparing the average running time of \KaHyPar{MF} with \KaHyPar{CA} and
-         other systems for different values of $k$.}
+         other partitioners for different values of $k$.}
 \label{tbl:full_running_time_k} 
 \end{table}
 
@@ -363,6 +345,6 @@ $\alpha'$ & Avg.$[\%]$ & Avg.$[\%]$ & Avg.$[\%]$ \\
 \centering
 \input{experiments/final_flow/fullset-k.tex} %
 \caption{Min-Cut performance plots comparing \KaHyPar{MF} with \KaHyPar{CA} and
-         other systems for different values of $k$.}
+         other partitioners for different values of $k$.}
 \label{fig:final_flow_k}
 \end{figure}
